--- a/components/delta/model.jade
+++ b/components/delta/model.jade
@@ -13,6 +13,7 @@ template(name='model_edit')
                         +text_edit key='icon' label='Icon' direct=true
                         +textarea_edit key='description' label='Description' direct=true
                         +array_edit key='tags' label='Tags' direct=true
+                        +text_edit key='collection' label='Collection' direct=true
                     a.ui.green.big.circular.icon.button(href="/m/#{slug}")
                         i.big.checkmark.icon
                     #delete_model.ui.red.icon.circular.button
