--- a/client/profile/user_edit.jade
+++ b/client/profile/user_edit.jade
@@ -2,7 +2,7 @@ template(name='user_edit')
     .ui.stackable.padded.grid.pad_left
         .middle.aligned.row
             .four.wide.center.aligned.column
-                a.ui.large.basic.circular.green.button(href="/user/#{user_from_username_param.username}/view" title='Profile') 
+                a.ui.large.basic.circular.green.button(href="/user/#{user_from_username_param.username}/" title='Profile') 
                     i.checkmark.icon
                     |Save
             .eight.wide.center.aligned.column
