--- a/components/delta/model_doc.jade
+++ b/components/delta/model_doc.jade
@@ -8,7 +8,7 @@ template(name='model_doc_edit')
                     +creation_info
                     a.ui.green.big.circular.icon.button(href="/m/#{model}/#{_id}/view")
                         i.big.checkmark.icon
-                    #delete_model.ui.red.icon.circular.button
+                    #delete_doc.ui.red.icon.circular.button
                         i.trash.icon
                             
                 .twelve.wide.column
