--- a/client/admin.jade
+++ b/client/admin.jade
@@ -35,7 +35,7 @@ template(name='user_table')
                     td
                         a.ui.icon.button(href="/user/#{username}/edit")
                             i.pencil.icon
-                        a.ui.icon.button(href="/user/#{username}/view")
+                        a.ui.icon.button(href="/user/#{username}/")
                             i.chevron.right.icon
                         
 
