--- a/client/nav.jade
+++ b/client/nav.jade
@@ -13,8 +13,8 @@ template(name='nav')
                 a.item.set_bookmarked_model(href="/m/#{slug}" class="{{isActivePath '/m/#{slug}'}}")
                     //- i.large.icon(name=icon)
                     |#{title}
-            a.icon.item(href='/users' class="{{isActivePath '/users'}}" title='Users')
-                i.large.users.icon
+            //- a.icon.item(href='/users' class="{{isActivePath '/users'}}" title='Users')
+            //-     i.large.users.icon
             //- a.icon.item(href='/frontdesk' class="{{isActivePath '/frontdesk'}}" title='Staff')
             //-     i.large.briefcase.icon
             a.icon.item(href='/checkin' class="{{isActivePath '/checkin'}}" title='Health Club')
