--- a/components/accounts/login.jade
+++ b/components/accounts/login.jade
@@ -17,7 +17,7 @@ template(name='login')
                     input.password(type='password')
                 if username
                     if logging_in
-                        .ui.fluid.large.hhblue.circular.button.enter(title="Login #{username}" class=enter_class)
+                        .ui.fluid.large.teal.circular.button.enter(title="Login #{username}" class=enter_class)
                             |Login #{username}
                             i.right.chevron.icon
                     else
