--- a/client/profile.jade
+++ b/client/profile.jade
@@ -31,15 +31,13 @@ template(name='profile')
                             .ui.label #{address}
                     
                     if is_admin
-                        .ui.vertical.fluid.menu
-                            a.item(href="/user/#{user_from_username_param.username}/edit")
-                                i.settings.icon
-                                | Settings
+                        a.ui.circular.fluid.button(href="/user/#{user_from_username_param.username}/edit")
+                            i.settings.icon
+                            | Settings
                     if current_user
-                        .ui.vertical.fluid.menu
-                            a.item.logout(href='#')
-                                i.sign.out.icon
-                                |Log Out
+                        .ui.circular.fluid.button.logout
+                            i.sign.out.icon
+                            |Log Out
                     .ui.segment
                         .ui.header
                             |#{user.points} Following
@@ -56,8 +54,8 @@ template(name='profile')
             
                 .six.wide.column
                     +violations
-                    +user_bookmarks    
-                    +user_feed
+                    //- +user_bookmarks    
+                    //- +user_feed
                     +user_tasks
                     +user_notifications
                 .six.wide.column
@@ -73,14 +71,11 @@ template(name='profile')
                     +user_checkins
                     //- +user_chat
             
-template(name='user_chat')
-    +view_chats
-            
             
 template(name='user_checkins')
     .ui.header 
         i.barbell.icon
-        | User Checkins
+        | Checkins
             
             
             
@@ -93,10 +88,9 @@ template(name='user_about')
 template(name='violations')
     .ui.fluid.styled.accordion
         .active.title
-            .ui.inline.header 
+            .ui.grey.inline.header 
                 i.exclamation.triangle.icon
                 |Violations
-                i.dropdown.icon
         .active.content
             .ui.list
                 each violations
@@ -141,10 +135,9 @@ template(name='user_unread')
 template(name='user_tasks')
     .ui.fluid.styled.accordion
         .active.title
-            .ui.inline.header 
+            .ui.grey.inline.header 
                 i.tasks.icon
                 |Tasks
-                i.dropdown.icon
         .active.content
             .ui.fluid.input
                 input.assign_task(type='text' placeholder='Assign task')
@@ -175,10 +168,9 @@ template(name='user_array_list')
 template(name='role_switcher')
     .ui.fluid.styled.accordion
         .active.title
-            .ui.inline.header 
+            .ui.grey.inline.header 
                 i.user.shield.icon(title='Role Switcher')
                 |Roles
-                i.dropdown.icon
         .active.content
             if is_eric
                 +user_array_element_toggle key='roles' value='dev' user=currentUser
@@ -201,10 +193,9 @@ template(name='user_string_toggle')
 template(name='user_tags')
     .ui.fluid.styled.accordion
         .active.title
-            .ui.inline.header 
+            .ui.grey.inline.header 
                 i.tags.icon
-                |User Tags
-                i.dropdown.icon
+                |Tags
         .active.content
             each tags
                 .ui.basic.label 
@@ -220,10 +211,9 @@ template(name='user_tags')
 template(name='user_notifications')
     .ui.fluid.styled.accordion
         .active.title
-            .ui.inline.header 
+            .ui.grey.inline.header 
                 i.bullhorn.icon
                 |Notifications
-                i.dropdown.icon
         .active.content
             +user_following
             +follow_user
@@ -250,7 +240,7 @@ template(name='follow_user')
 template(name='user_wall')
     .ui.fluid.styled.accordion
         .active.title
-            .ui.inline.header 
+            .ui.grey.inline.header 
                 i.edit.icon
                 |Wall
         .active.content
