--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -2,15 +2,14 @@ template(name='delta')
     with current_model
         .ui.stackable.padded.grid
             .row
-                // .twelve.wide.column.padleft.scrolling(class=delta_left_column_class)
                 .six.wide.column.scrolling
                     .ui.right.aligned.inline.header
                         i.icon(class=icon)
                         | #{title}
                     unless is_loading
-                        //- if can_add
-                        .ui.icon.circular.green.big.button.add_model_doc(title="Add #{title}")
-                            i.plus.icon
+                        if currentUser
+                            .ui.icon.circular.green.big.button.add_model_doc(title="Add #{title}")
+                                i.plus.icon
                         if can_edit
                             //- +edit_button
                             .ui.icon.circular.button.edit_model
@@ -22,12 +21,13 @@ template(name='delta')
                         // //         i.play.icon
                                 
                         if current_delta
-                            .ui.icon.circular.button.print_delta(title='Print Session Doc')
-                                i.code.icon
-                            .ui.reset.icon.circular.button(title='Reload Session')
-                                i.refresh.icon
-                            .ui.delete_delta.icon.circular.button(title='Delete Session')
-                                i.trash.icon
+                            if is_dev
+                                .ui.icon.circular.button.print_delta(title='Print Session Doc')
+                                    i.code.icon
+                                .ui.reset.icon.circular.button(title='Reload Session')
+                                    i.refresh.icon
+                                .ui.delete_delta.icon.circular.button(title='Delete Session')
+                                    i.trash.icon
                         else
                             .create_delta.ui.button.pointer(title='new session')
                                 i.plus.icon
@@ -49,8 +49,8 @@ template(name='facet')
                 .ui.inline.small.grey.header 
                     if icon
                         i.small.grey.icon(class=icon)
-                    if label
-                        |#{label}
+                    if title
+                        |#{title}
                     else 
                         |#{key}
                     i.dropdown.icon
@@ -60,13 +60,13 @@ template(name='facet')
                 //-     input.add_filter(type='text')
                 each filtering_res
                     if name
-                        .selector.ui.compact.circular.button.toggle_selection(class=toggle_value_class title=count)
+                        .selector.ui.circular.button.toggle_selection(class=toggle_value_class title=count)
                             | #{name}
-                            small #{cal_count} #{count}
+                            //- small #{cal_count} #{count}
                     else
-                        .selector.ui.compact.circular.button.toggle_selection(class=toggle_value_class title=count)
+                        .selector.ui.circular.button.toggle_selection(class=toggle_value_class title=count)
                             strong [null]
-                            small #{cal_count}
+                            //- small #{cal_count}
 
 template(name='toggle_delta_config')
     if boolean_true
@@ -90,17 +90,17 @@ template(name='delta_result')
                 .extra
                     +user_list_toggle key='bookmark_ids' icon='bookmark' label='Bookmark' color='red'
                     if is_model
-                        a.ui.circular.button.route_model(href="/m/#{slug}")
+                        a.ui.circular.basic.button.route_model(href="/m/#{slug}")
                             i.sitemap.icon
                             |View
-                        a.ui.circular.button.route_model(href="/model/edit/#{_id}")
+                        a.ui.circular.basic.button.route_model(href="/model/edit/#{_id}")
                             i.edit.icon
                             |Edit
                     else
-                        a.ui.circular.button(href="/m/#{current_model.slug}/#{_id}/edit")
+                        a.ui.circular.basic.button(href="/m/#{current_model.slug}/#{_id}/edit")
                             i.pencil.icon
                             |Edit
-                        a.ui.circular.button(href="/m/#{current_model.slug}/#{_id}/view")
+                        a.ui.circular.basic.button(href="/m/#{current_model.slug}/#{_id}/view")
                             i.eye.icon
                             |View
                     //- each model.actions
